<resources>
    <string name="app_name">ProyectoFinalLab3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Incio</string>
    <string name="menu_profile">Perfil</string>
    <string name="menu_property">Inmueble</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_contract">Contrato</string>
    <string name="menu_tenant">Inquilino</string>
    <string name="menu_pay">Pagos</string>
    <string name="add_inmueble">New Property</string>
    <string name="property_image">Imagen del Inmovil</string>
    <string name="inmueble_image">iamgen del inmueble</string>

    <string-array name="estado_array">
        <item>Disponible</item>
        <item>Ocupado</item>
    </string-array>

</resources>