<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/menu_home"
        app:iconTint="@null" />

    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/menu_profile"
        app:iconTint="@null" />

    <item
        android:id="@+id/propertyFragment"
        android:icon="@drawable/ic_property"
        android:title="@string/menu_property"
        app:iconTint="@null" />


    <item
        android:id="@+id/nav_contract"
        android:icon="@drawable/ic_contract"
        android:title="@string/menu_contract"
        app:iconTint="@null" />

    <item
        android:id="@+id/nav_tenant"
        android:icon="@drawable/ic_tenant"
        android:title="@string/menu_tenant"
        app:iconTint="@null" />

    <item
        android:id="@+id/nav_pay"
        android:icon="@drawable/ic_pay"
        android:title="@string/menu_pay"
        app:iconTint="@null" />

    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/ic_logout"
        android:title="@string/menu_logout"
        app:iconTint="@null" />

</menu>
