<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_property"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_property" />
        <item
            android:id="@+id/nav_contract"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_contract" />
        <item
            android:id="@+id/nav_tenant"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_tenant" />
        <item
            android:id="@+id/nav_pay"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_pay" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_logout" />
    </group>
</menu>