<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.fermin2049.proyectofinallab3.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.fermin2049.proyectofinallab3.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_property"
        android:name="com.fermin2049.proyectofinallab3.ui.property.PropertyFragment"
        android:label="@string/menu_property"
        tools:layout="@layout/fragment_property" />
    <fragment
        android:id="@+id/nav_contract"
        android:name="com.fermin2049.proyectofinallab3.ui.contract.ContractFragment"
        android:label="@string/menu_contract"
        tools:layout="@layout/fragment_contract" />
    <fragment
        android:id="@+id/nav_logout"
        android:name="com.fermin2049.proyectofinallab3.ui.logout.LogoutFragment"
        android:label="@string/menu_logout"
        tools:layout="@layout/fragment_logout" />
    <fragment
        android:id="@+id/nav_tenant"
        android:name="com.fermin2049.proyectofinallab3.ui.tenant.TenantFragment"
        android:label="@string/menu_tenant"
        tools:layout="@layout/fragment_tenant" />
    <fragment
        android:id="@+id/nav_pay"
        android:name="com.fermin2049.proyectofinallab3.ui.pay.PayFragment"
        android:label="fragment_pay"
        tools:layout="@layout/fragment_pay" />
</navigation>